--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,9 @@ server.port=8808
 spring.datasource.hikari.maximum-pool-size=4
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/test
-spring.datasource.username=jung
-spring.datasource.password=pass
+spring.datasource.url=jdbc:mysql://database-p.cshk6mraw6zx.us-east-1.rds.amazonaws.com:3306/board?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=pproject
 
 
 
