--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 
 
-server.port=8808
+server.port=8080
 
 spring.datasource.hikari.maximum-pool-size=4
 
 
-spring.datasource.url=jdbc:mysql://database-p.cshk6mraw6zx.us-east-1.rds.amazonaws.com:3306/board?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://database-project.cdu2ldahkikl.ap-northeast-2.rds.amazonaws.com:3306/test?serverTimezone=UTC&characterEncoding=UTF-8
 spring.datasource.username=root
-spring.datasource.password=pproject
+spring.datasource.password=htmproject12
 
 
 
@@ -16,3 +16,4 @@ spring.datasource.password=pproject
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
+
